fixed the close button position on mobile

--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -238,7 +238,7 @@
 
     @include sm {
         top: -17px;
-        right: -8px;
+        right: 4px;
     }
 
     &:hover{
