--- a/style.css
+++ b/style.css
@@ -1950,7 +1950,7 @@ thead.fc-border th:last-child {
 @media (max-width: 600px) {
   .fencing-modal-close {
     top: -17px;
-    right: -8px;
+    right: 4px;
   }
 }
 .fencing-modal-close:hover {
